Use velocity brigadier as command framework